--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.0.22",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vitest": "^0.3.5",
     "vue-tsc": "^0.29.8"
   }
 }
