--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "pinia": "^2.0.11",
+    "uuid": "^8.3.2",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
@@ -21,7 +23,7 @@
     "tailwindcss": "^3.0.22",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
-    "vitest": "^0.3.5",
+    "vitest": "^0.7.4",
     "vue-tsc": "^0.29.8"
   }
 }
