--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "test": "vitest --dom",
+    "test": "vitest",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "jsdom": "^19.0.0",
     "pinia": "^2.0.11",
     "uuid": "^8.3.2",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@pinia/testing": "^0.0.10",
@@ -22,7 +24,6 @@
     "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.4.2",
     "c8": "^7.11.0",
-    "happy-dom": "^2.50.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
     "typescript": "^4.5.4",
