--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsdom": "^19.0.0",
     "pinia": "^2.0.11",
     "uuid": "^8.3.2",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.25",
     "vue-router": "4",
     "vuedraggable": "^4.1.0"
