--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "firebase": "^9.6.10",
     "jsdom": "^19.0.0",
     "pinia": "^2.0.11",
     "uuid": "^8.3.2",
