--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "types": ["vitest/globals"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["src/**/*.test.ts",],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
